<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <ImageView
        android:layout_height="32dp"
        android:layout_width="153dp"
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/img"
        android:contentDescription="@string/logo" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="329dp"
        android:layout_height="459dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/authen"
        android:id="@+id/carousel"
        app:flow_verticalGap="40dp">
        <ImageView
        android:layout_height="329dp"
        android:layout_width="329dp"
        android:id="@+id/imageCarousel"
        android:src="@drawable/img_1"
        android:contentDescription="@string/image_carousel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="234dp"
            android:layout_height="90dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbooking_hello"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:text="@string/enjoy_your_favorite_movies"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/authen"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_in"
            android:id="@+id/signIn"
            android:backgroundTint="@color/yello_theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_up"
            android:id="@+id/signUp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privac_y_policy"

    />    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>