<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.SignIn">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/backLayout">
        <ImageView
            android:layout_margin="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_2"
            android:id="@+id/backBtnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:fontFamily="@font/sfpro_medium"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/signInLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backLayout"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lay1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@android:color/transparent"
            app:hintTextColor="@color/date_black"
            android:textColorHint="@color/date_black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="16sp"
                android:textColorHint="@color/card_date_black"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_background"
                android:id="@+id/gddn_txtusername"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:id="@+id/lay2"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/date_black"
            app:layout_constraintTop_toBottomOf="@id/lay1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signinBtn"
            app:boxStrokeColor="@android:color/transparent"
            app:hintTextColor="@color/date_black"
            android:textColorHint="@color/date_black"
            app:boxBackgroundColor="@color/date_black">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColorHint="@color/card_date_black"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:id="@+id/gddn_txtpass"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/edit_text_background"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_in"
            android:id="@+id/signinBtn"
            android:backgroundTint="@color/yello_theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@+id/forgotPasswordET"
            app:layout_constraintStart_toStartOf="parent"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Forgot password?"
            android:id="@+id/forgotPasswordET"
            android:textColor="@color/text_grey"
            android:backgroundTint="@color/text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <View
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/line"
            android:id="@+id/underline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView"
            />
        <View
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/line"
            android:id="@+id/underline2"

            app:layout_constraintStart_toEndOf ="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text= "    Or connect with    "
            android:textSize="20sp"
            android:id="@+id/textView"
            app:layout_constraintLeft_toRightOf="@id/underline1"
            app:layout_constraintRight_toLeftOf="@id/underline2"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/bh_text_white"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_height="56dp"
            android:text="@string/facebook"
            android:id="@+id/facebookBtn"
            android:backgroundTint="#1A1A1A"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            android:layout_marginTop="30dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookBtn"
            android:layout_height="56dp"
            android:text="@string/google"
            android:id="@+id/googleBtn"
            android:backgroundTint="#1A1A1A"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/bh_text_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privac_y_policy"
            android:textAlignment="center"
            android:textColor="@color/text_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleBtn"

            app:layout_goneMarginTop="30dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>