<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.SignUp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/backLayout">
        <ImageView
            android:layout_margin="16dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_2"
            android:id="@+id/backBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/signUpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backLayout"
        >

        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/outline_email_24"
            app:layout_constraintBottom_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etEmail" />
        <EditText
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:id="@+id/etEmail"
            android:textColor="@color/bh_text_white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/bg_disabled_btn"
            android:paddingStart="40dp"
            android:paddingBottom="12dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textEmailAddress" />
        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/outline_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etUserName"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="User name"
            android:inputType="textPersonName"
            android:paddingStart="40dp"
            android:paddingBottom="12dp"
            android:textColor="@color/bh_text_white"
            android:textColorHint="@color/bg_disabled_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            android:layout_marginTop="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:layout_marginTop="12dp"
            android:id="@+id/etPassword"
            android:textColor="@color/bh_text_white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/bg_disabled_btn"
            android:paddingStart="40dp"
            android:paddingBottom="12dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserName"
            android:inputType="textPassword"
            android:textSize="18dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Sign Up"
            android:id="@+id/btnSignUp"
            android:backgroundTint="@color/yello_theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <View
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/line"
            android:id="@+id/underline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView"
            />
        <View
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@drawable/line"
            android:id="@+id/underline2"

            app:layout_constraintStart_toEndOf ="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:text= "    Or connect with    "
            android:textSize="20sp"
            android:id="@+id/textView"
            app:layout_constraintLeft_toRightOf="@id/underline1"
            app:layout_constraintRight_toLeftOf="@id/underline2"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_height="56dp"
            android:text="@string/facebook"
            android:id="@+id/facebookBtn"
            android:backgroundTint="#1A1A1A"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/bh_text_white"/>
        <com.google.android.material.button.MaterialButton
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookBtn"
            android:layout_height="56dp"
            android:text="@string/google"
            android:id="@+id/googleBtn"
            android:backgroundTint="#1A1A1A"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            android:textColor="@color/bh_text_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/by_sign_in_or_sign_up_you_agree_to_our_terms_of_service_and_privac_y_policy"
            android:textAlignment="center"
            android:textColor="@color/text_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleBtn"

            app:layout_goneMarginTop="30dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>